RESOLVED FIXED281492
AX: [GTK]: Crash in AccessibilityObjectAtspi::textAttributes
https://bugs.webkit.org/show_bug.cgi?id=281492
Summary AX: [GTK]: Crash in AccessibilityObjectAtspi::textAttributes
Georges Basile Stavracas Neto
Reported 2024-10-15 07:43:48 PDT
It crashes because it passes nullptr to the accessibilityTextAttributes function
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-15 07:44:00 PDT
Georges Basile Stavracas Neto
Comment 2 2024-10-15 08:46:10 PDT
EWS
Comment 3 2024-10-17 04:39:56 PDT
Committed 285325@main (5397a7b48c68): <https://commits.webkit.org/285325@main> Reviewed commits have been landed. Closing PR #35216 and removing active labels.
Mike Gorse
Comment 4 2024-10-21 09:09:06 PDT
Thanks for the fix. It would be nice if someone could cherry-pick it for webkitglib/2.46.
Note You need to log in before you can comment on or make changes to this bug.